GUI improvements and password reset
